# Hiking

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Climbing.sln  Dependency.cmake
Assets/: Walking.fbx  bot.glb
Assets/Character/: Character.gltf
Clilmbing/: Applicationclass.cpp  Applicationclass.h  Clilmbing.vcxproj  Clilmbing.vcxproj.filters  Colorshaderclass.cpp  Colorshaderclass.h  D3dclass.cpp  D3dclass.h  Main.cpp  Modelclass.cpp  Modelclass.h  SystemClass.cpp
Climbing/: Applicationclass.cpp  Applicationclass.h  Cameraclass.cpp  Cameraclass.h  Clilmbing.vcxproj  Clilmbing.vcxproj.filters  Climbing.vcxproj  Colorshaderclass.cpp  Modelclass.cpp  Modelclass.h  SystemClass.cpp  Systemclass.h  Texture.vs  Textureclass.h  Textureshaderclass.cpp
Engine/: Engine.rc  Engine.vcxproj
Include/: AnimationData.h  AnimationPlayer.h  AnimationStateManager.h  AnimationSystem.h  Application.h  BoneShader.h  Camera.h  Colorshader.h  Common.h  Context.h  D3d.h  HeightMap.h  IKManager.h  Input.h  JointShader.h  Mesh.h  Model.h  ModelShader.h  Physics.h  PhysicsManager.h  PhysicsObject.h  Pose.h  RaycastingManager.h  Texture.h  Textureclass.h  Textureshader.h  Textureshaderclass.h  Timer.h
Shaders/: Bone.ps  Bone.vs  Joint.ps  Joint.vs  Model.ps  Model.vs  Texture.ps  Texture.vs
Src/: AnimationData.cpp  AnimationPlayer.cpp  AnimationStateManager.cpp  AnimationSystem.cpp  Application.cpp  Applicationclass.cpp  BoneShader.cpp  Camera.cpp  Colorshader.cpp  Common.cpp  Context.cpp  D3d.cpp  HeightMap.cpp  IKManager.cpp  Input.cpp  JointShader.cpp  Main.cpp  Mesh.cpp  Model.cpp  ModelShader.cpp  Modelclass.cpp  Physics.cpp  PhysicsManager.cpp  PhysicsObject.cpp  Pose.cpp  RaycastingManager.cpp  Texture.cpp  Textureclass.cpp  Textureshader.cpp  Textureshaderclass.cpp  Timer.cpp
